# tinysignal

./: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml
app/: config.py  logger.py
app/infrastructure/: duckdb_connection.py
app/middleware/: __init__.py  cache_middleware.py
app/models/: __init__.py  cluster.py
app/repositories/: cluster.py
app/routers/: routes.py
app/services/: cache.py  cluster.py  crawler.py  hf.py  llm.py  telegram.py
